crates/sqe-lineage/tests/snapshots/event_serialise_test__snapshot_select_complete.snap
---
source: crates/sqe-lineage/tests/event_serialise_test.rs
assertion_line: 81
expression: ev
---
{
  "eventType": "COMPLETE",
  "eventTime": "2026-05-08T10:00:01Z",
  "producer": "https://github.com/sbp/sqe/v0.1.0",
  "schemaURL": "https://openlineage.io/spec/2-0-2/OpenLineage.json",
  "run": {
    "runId": "550e8400-e29b-41d4-a716-446655440000",
    "facets": {
      "nominalTime": {
        "nominalStartTime": "2026-05-08T10:00:00Z"
      }
    }
  },
  "job": {
    "namespace": "sqe",
    "name": "query:abc",
    "facets": {
      "sql": {
        "query": "SELECT 1",
        "dialect": "sqe"
      }
    }
  },
  "inputs": [
    {
      "namespace": "https://polaris.example/api/catalog",
      "name": "sales.orders",
      "facets": {
        "schema": {
          "fields": [
            {
              "name": "id",
              "type": "long"
            }
          ]
        },
        "dataSource": {
          "name": "polaris",
          "uri": "https://polaris.example/api/catalog"
        }
      }
    }
  ],
  "outputs": []
}
